# gsc-bing-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
gsc_bing_mcp/: __init__.py  server.py
gsc_bing_mcp/clients/: __init__.py  bing_client.py  gsc_client.py
gsc_bing_mcp/extractors/: __init__.py  chrome_cookies.py  sapisidhash.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
